--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ src/*build*
 *.suo
 /*.vs*
 /src/*.vs*
+*.vcxproj
+*.vcxproj.filters
+*.dir
+*/**/CMakeFiles
+*.cmake
+*.sln
 
 # KDevelop
 *.kate-swp
